--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <html>
-<link rel= "stylesheet" type= "text/css" href= "{{url_for('static',filename='styles/index.css')}}">
+<link rel= "stylesheet" type= "text/css" href= "{{url_for('styles',filename='index.css')}}">
   <title>Audio Classification</title>
     <div class="center-screen">
       <div class="title">
