--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" type="text/css" href="{{url_for('styles',filename='index.css')}}">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='styles/index.css')}}">
   <title>Audio Classification</title>
 </head>
 <body>
