--- a/flask_app/templates/results.html
+++ b/flask_app/templates/results.html
@@ -1,5 +1,5 @@
 <html>
-<link rel= "stylesheet" type= "text/css" href= "{{url_for('styles',filename='results.css')}}">
+<link rel= "stylesheet" type= "text/css" href= "{{url_for('static',filename='styles/results.css')}}">
 <title>Results</title>
   <div class="center-screen">
     <div class="title">
